# gh-issue-sync

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  README_SERVICE.md  openapi.yaml  pyproject.toml
app/: config.py  github.py  logging.py  main.py  schemas.py  service.py
examples/: issues_spec.json  run.http
scripts/hooks/: run_pytest.sh
svc/: __init__.py  cli.py
tests/: test_idempotent_rerun.py  test_label_ensure.py  test_list_issues_pagination.py  test_project_add_and_status.py
tests/fixtures/: graphql_add_item.json  graphql_issue_project_items.json  graphql_project_fields.json  graphql_project_lookup.json  graphql_repo_owner_viewer.json  issues_page_1.json  issues_page_2.json
